--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <img src="work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://aumi4.com" class="portfolio__link-name">View details <br> https://aumi4.com</a>
+                            <a href="https://harmanveer2546.github.io/school/" class="portfolio__link-name">View details <br>school</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
