--- a/index.html
+++ b/index.html
@@ -112,42 +112,42 @@
                         <img src="work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://harmanveer2546.github.io/school/" class="portfolio__link-name">View details <br>school</a>
+                            <a href="https://website-pr.myshopify.com/" class="portfolio__link-name">View details <br> YOU ZEE <br> Pass- 12345</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="work2.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://unutrients.com" class="portfolio__link-name">View details <br> https://unutrients.com</a>
+                            <a href="https://harmanveer2546.github.io/Weather-App/" class="portfolio__link-name">View details <br> Weather App </a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="work3.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://www.biktrix.com" class="portfolio__link-name">View details <br> https://www.biktrix.com</a>
+                            <a href="https://harmanveer2546.github.io/nuron/" class="portfolio__link-name">View details <br> Nuron </a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="work4.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="http://drinkbev.com" class="portfolio__link-name">View details <br> http://drinkbev.com</a>
+                            <a href="https://harmanveer2546.github.io/watch-website/" class="portfolio__link-name">View details <br> Watches Website </a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="work5.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="http://juneswimwear.com" class="portfolio__link-name">View details <br> http://juneswimwear.com</a>
+                            <a href="https://harmanveer2546.github.io/Ice-Cream/" class="portfolio__link-name">View details <br> Ice Cream </a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="work6 (1).jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://wearedip.co.uk" class="portfolio__link-name">View details <br> https://wearedip.co.uk</a>
+                            <a href="https://harmanveer2546.github.io/school/" class="portfolio__link-name">View details <br> School </a>
                         </div>
                     </div>
                 </div>
